<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="25dp"
            android:paddingTop="10sp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:showText="false"
            android:text="@string/switch_1"
            android:textSize="16sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="25dp"
            android:paddingTop="10sp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:showText="false"
            android:text="@string/switch_2"
            android:textSize="16sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="25dp"
            android:paddingTop="10sp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:showText="false"
            android:text="@string/switch_3"
            android:textSize="16sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switch4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="25dp"
            android:paddingTop="10sp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:showText="false"
            android:text="@string/switch_4"
            android:textSize="16sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/switch5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:paddingTop="10sp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:showText="false"
            android:text="@string/switch_5"
            android:textSize="16sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <Button
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Verificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify" />

</androidx.constraintlayout.widget.ConstraintLayout>